<resources>
    <string name="app_name">dconfianza</string>
    <!--miscellaneous-->
    <string name="misc_please_wait">Espere un momento</string>
    <string name="misc_required_field">Campo requerido</string>
    <string name="misc_error">Error</string>
    <string name="misc_hello">Hola</string>
    <string name="misc_admiration">!</string>
    <string name="dd">Día(s)</string>
    <string name="misc_Yes">Sí</string>
    <string name="misc_No">No</string>
    <string name="misc_Alert">Alerta</string>
    <string name="misc_About">Acerca De</string>
    <string name="misc_Logout">Cerrar Sesión</string>
    <string name="misc_Settings">Ajustes</string>
    <string name="misc_Profile">Perfil</string>
    <string name="misc_ChangePassword">Cambiar password</string>
    <string name="misc_years">años</string>
    <string name="misc_session_error">Eror de sesión, no se encuentra el usuario</string>
    <string name="misc_ok">Ok</string>
    <string name="misc_contact_us">Contactanos</string>
    <string name="misc_submit">Enviar</string>
    <string name="misc_your_message">Su mensaje</string>
    <string name="misc_support">Preguntas y comentarios</string>
    <string name="misc_email_support">contacto@recomendado.mx</string>
    <string name="misc_about_text1">Recomendado 1.0</string>
    <string name="misc_about_text2">Dudas y comentarios</string>

    <!--Registration-->
    <string name="reg_register">Registrarme</string>
    <string name="reg_signup">Registrarse</string>
    <string name="reg_singup">No tengo cuenta, Registrarme!</string>
    <string name="reg_email_registration">E-mail</string>
    <string name="reg_login">Ya tengo cuenta</string>
    <string name="reg_first_name">Nombre</string>
    <string name="reg_last_name">Apellido</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_confirm_password">Confirmar password</string>
    <string name="reg_access_denied">Acceso denegado</string>
    <string name="reg_user_exists">El usuario ya está registrado</string>
    <string name="reg_invalid_email">Email inválido</string>
    <string name="reg_password_mismatch">Password y Confirmar password no son iguales</string>
    <string name="reg_user_create_error">Error al registrar el usuario</string>
    <string name="reg_error">Ha ocurrido un error</string>
    <string name="read_terms">Ver términos y condiciones</string>
    <string name="reg_terms">Acepto términos y condiciones</string>
    <string name="reg_email_login">Ingresar</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>

    <!--Main-->
    <string name="terms_unchecked">Acepte términos y condiciones</string>
    <string name="main_search">Buscar</string>
    <string name="main_recommend">Recomendar</string>
    <string name="main_location_prompt">Seleccione ciudad</string>
    <string name="main_service_prompt">Seleccione servicio</string>
    <string name="main_name">Nombre</string>
    <string name="main_mobile_phone">Teléfono móvil</string>
    <string name="main_mobile">Móvil</string>
    <string name="main_work_phone">Teléfono trabajo</string>
    <string name="main_work">Trabajo</string>
    <string name="main_email">Email</string>
    <string name="main_email_subject">Recomendado Contacto</string>
    <string name="main_location">Ciudad</string>
    <string name="main_rating">Calificación</string>
    <string name="main_service">Servicio</string>
    <string name="main_notes">Notas</string>
    <string name="main_comments">Comentarios</string>
    <string name="main_add_rating">Agregar calificación</string>
    <string name="main_submit_rating">Agregar</string>
    <string name="main_add_worker">Agregar colaborador</string>
    <string name="main_phone_validation">Agregue almenos un teléfono</string>
    <string name="main_worker_added">Colaborador agregado</string>
    <string name="main_rating_added">Su calificación ha sido agregada</string>
    <string name="main_add_comment">Agregue un comentario</string>
    <string name="main_select_rating">Seleccione su calificación</string>
    <string name="main_message_received">Hemos recibido su mendaje. Gracias!</string>
    <string name="main_service_nodata">No se encontraron colaboradores.</string>

    <string name="wkprofile_addedby">Agregado por</string>
    <string name="wkprofile_addedDate">Fecha</string>

</resources>
