<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.scubacode.recomendado.LoginActivity"
    tools:showIn="@layout/activity_login"
    >
    <View
        android:id="@+id/frame2"
        android:layout_width="1dp"
        android:layout_height="50dp" />

    <View
        android:layout_width="1dp"
        android:layout_height="8dp" />
    <!-- Email  -->
    <EditText
        android:id="@+id/text_email"
        android:text="horaciotg@hotmail.com"
        android:inputType="textEmailAddress"
        android:hint="@string/reg_email"
        android:layout_gravity="center_horizontal"
        style="@style/editInput">
        <requestFocus />
    </EditText>
    <View
        android:layout_width="1dp"
        android:layout_height="8dp" />
    <!-- Password  -->
    <EditText
        android:id="@+id/text_password"
        android:text="123"
        android:inputType="textPassword"
        style="@style/editInput"
        android:hint="@string/reg_password"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="1dp"
        android:layout_height="8dp" />
    <!-- Login  -->
    <Button
        android:id="@+id/button_login"
        android:text="@string/reg_email_login"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        style="@style/button3"
        android:layout_marginBottom="40dp"/>


    <Button
        android:id="@+id/button_signup"
        android:text="@string/reg_singup"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        style="@style/button3" />

    <TextView
        android:id="@+id/text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/misc_support"
        style="@style/label_style"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/text_support_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/misc_email_support"
        style="@style/label_style"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>