<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="view.CreateAccountActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.3"
        android:padding="@dimen/edit_form_padding"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_first_name"
                android:inputType="textPersonName"
                android:hint="@string/reg_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <requestFocus />
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_last_name"
                android:inputType="textPersonName"
                android:hint="@string/reg_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_email"
                android:inputType="textEmailAddress"
                android:hint="@string/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_password"
                android:inputType="textPassword"
                android:hint="@string/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_confirm_password"
                android:inputType="textPassword"
                android:hint="@string/reg_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/edit_form_padding"
        android:layout_weight="0.7"
        android:gravity="center">

        <CheckBox android:id="@+id/checkbox_disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:text="@string/reg_terms"
            android:autoLink="web"
            />

        <TextView
            android:id="@+id/txt_view_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_terms"
            />

        <Button
            android:id="@+id/button_register"
            android:text="@string/reg_register"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/RaisedButtonDark"
            />

    </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>


