<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_first_name"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_edit_text_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_last_name"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mobile_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_edit_text_mobile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_mobile_phone"
                android:inputType="phone"
                android:maxLength="10"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_work_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_edit_text_work_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_work_phone"
                android:inputType="phone"
                android:maxLength="10"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_email"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_location"
        android:spinnerMode="dialog"
        style="@android:style/Widget.Spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
    />

    <Spinner
        android:id="@+id/spinner_service"
        android:spinnerMode="dialog"
        style="@android:style/Widget.Spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        />

    <Button
        android:id="@+id/button_add_worker"
        android:text="@string/main_add_worker"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/RaisedButtonDark"/>
</LinearLayout>
</ScrollView>
</android.support.design.widget.CoordinatorLayout>