<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.scubacode.dconfianza.WorkerProfileActivity"
    android:background="@color/backGroundColor"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <include layout="@layout/actionbar_toolbar"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
        >
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_name"
                style="@style/label2_style"
                />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DataOnCardStyle"
                />

        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_mobile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_mobile_phone"
                style="@style/label2_style"/>

            <TextView
                android:id="@+id/text_mobile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DataOnCardStyle"
                />
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_work_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_work_phone"
                style="@style/label2_style"
               />

            <TextView
                android:id="@+id/text_work_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DataOnCardStyle"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_email"
                style="@style/label2_style"
                />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DataOnCardStyle"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_location"
                style="@style/label2_style"
                />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DataOnCardStyle"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_service"
                style="@style/label2_style"
                />

            <TextView
                android:id="@+id/text_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DataOnCardStyle"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout>

                <RatingBar
                    android:id="@+id/rating_bar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:isIndicator="true"
                    style="?android:attr/ratingBarStyleSmall"
                    />
            </LinearLayout>


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label2_style"
            android:text="@string/main_add_rating"
            android:layout_span="2"
            />
        </TableRow>

    </TableLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:scrollbars="vertical" />


    </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>