<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".dconfianza.ContactActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_first_name"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_email"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            app:errorTextAppearance="@style/InputLayoutError"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_edit_text_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/misc_your_message"
                android:fitsSystemWindows="true"
                android:breakStrategy="balanced"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:padding="5dp"
                />
        </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_submit"
        android:text="@string/misc_submit"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/RaisedButtonDark"
        />
</LinearLayout>

</android.support.design.widget.CoordinatorLayout>
